[project]
name = "dumbbell-don"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudinary>=1.44.1",
    "django>=5.2.5",
    "django-cloudinary-storage>=0.3.0",
    "django-cors-headers>=4.8.0",
    "django-debug-toolbar>=6.0.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djoser>=2.3.3",
    "drf-nested-routers>=0.94.2",
    "drf-yasg>=1.21.10",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "sslcommerz-lib>=1.0",
    "whitenoise>=6.9.0",
]
